--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@angular/platform-browser": "^2.4.8",
     "@angular/platform-browser-dynamic": "^2.4.8",
     "@angular/router": "^3.4.8",
+    "@types/node": "^7.0.5",
     "angular-in-memory-web-api": "^0.2.4",
     "body-parser": "^1.16.1",
     "core-js": "^2.4.1",
